# tlsight

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  build.rs  tlsight.dev.toml  tlsight.example.toml  tlsight.prod.toml
.github/workflows/: ci.yml  deploy.yml  docker-prod-image.yml
data/: Makefile  caa_domains.tsv  process.py
docs/: future.md  quality.md  review-2026-03-11.md  sdd.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.tsx
frontend/src/components/: CertDetail.tsx  ChainView.tsx  ConsistencyView.tsx  CrossLinks.tsx  CtView.tsx  DnsInfo.tsx  Explain.tsx  ExportButtons.tsx  HostInput.tsx  IpBadges.tsx  IpCard.tsx  PortTabs.tsx  QueryHistory.tsx  SuiteNav.tsx  TlsParams.tsx  UnifiedIpView.tsx  ValidationSummary.tsx  ValueProp.tsx
frontend/src/lib/: api.ts  cert.test.ts  cert.ts  history.test.ts  history.ts  trust.test.ts  trust.ts  types.ts
frontend/src/styles/: global.css
src/: config.rs  enrichment.rs  error.rs  input.rs  lib.rs  main.rs  reload.rs  routes.rs  scalar_docs.html  state.rs  telemetry.rs
src/dns/: caa.rs  https_record.rs  mod.rs  tlsa.rs
src/quality/: checks.rs  http.rs  mod.rs  types.rs
src/security/: mod.rs  rate_limit.rs  target_policy.rs
src/tls/: chain.rs  connect.rs  mod.rs  ocsp.rs  params.rs  verifier.rs
src/validate/: caa_compliance.rs  caa_issuers.rs  chain_trust.rs  ct.rs  dane.rs  mod.rs
tests/: Makefile  contract.rs  integration.rs
tests/e2e/: Makefile  package.json  playwright.config.ts
tests/e2e/tests/: acceptance.spec.ts
