[package]
name = "tlsight"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Web-based TLS certificate inspection and diagnostics service"

[dependencies]
# TLS
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"
x509-parser = { version = "0.17", features = ["verify"] }
x509-ocsp = "0.2"

# Crypto
sha2 = "0.10"
der = "0.7"

# Time
time = "0.3"

# Web framework
axum = { version = "0.8", features = ["json"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "set-header", "trace", "limit"] }
governor = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = "0.15"

# Error handling
thiserror = "2"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Embedded frontend
rust-embed = "8"
mime_guess = "2"

# Request IDs
uuid = { version = "1", features = ["v7"] }

# OpenAPI
utoipa = { version = "5", features = ["axum_extras"] }

# Date/time for cert handling
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

# Percent-decoding for URL params
percent-encoding = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
rcgen = "0.13"
