[package]
name = "tlsight"
version = "0.10.4"
edition = "2024"
license = "MIT"
description = "Web-based TLS certificate inspection and diagnostics service"

[dependencies]
# TLS
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"
webpki-roots = "1"
x509-parser = { version = "0.18", features = ["verify"] }
x509-ocsp = "0.2"
x509-cert = "0.2"
spki = "0.7"

# DNS
mhost = { version = "0.11", default-features = false }

# Crypto
sha2 = "0.11"
sha1 = "0.11"
der = "0.7"

# Time
time = "0.3"

# Web framework
axum = { version = "0.8", features = ["json"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "set-header", "trace", "limit"] }
governor = "0.10"
netray-common = { version = "0.6.0", features = ["schema", "middleware", "telemetry", "otel", "cors", "server", "prometheus", "spa", "enrichment"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = "0.15"
arc-swap = "1"

# Error handling
thiserror = "2"

# Logging / tracing
tracing = "0.1"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Embedded frontend
rust-embed = "8"
mime_guess = "2"

# OpenAPI
utoipa = { version = "5", features = ["axum_extras"] }

# Date/time for cert handling
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

# Percent-decoding for URL params
percent-encoding = "2"

# HTTP client (readiness probe to enrichment service)
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "webpki-roots"] }


[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
rcgen = "0.14"
serde_json = "1"

